<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    tools:context=".fragments.ServiceDetailsFragment">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:text="@string/select_service_type"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/service_type"
        android:layout_marginTop="5dp"
        android:editable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:drawableRight="@drawable/down_arrow"
        android:background="@drawable/grey_line_border"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:text="@string/select_sub_type"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="5dp"
        android:drawableRight="@drawable/down_arrow"
        android:background="@drawable/grey_line_border"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:text="@string/comment"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/grey_line_border"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@color/colorRed"
        android:text="@string/submit"/>
</LinearLayout>