<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fbBlue"
            android:padding="15sp"
            android:text="@string/profile"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            android:background="@color/grey"/>

        <TextView
            android:id="@+id/textViewNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fbBlue"
            android:padding="15sp"
            android:visibility="gone"
            android:text="@string/notifications"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            android:background="@color/grey"/>

        <TextView
            android:id="@+id/textViewNominations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fbBlue"
            android:padding="15sp"
            android:visibility="gone"
            android:text="Nominations"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
        <TextView
            android:id="@+id/textViewLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fbBlue"
            android:padding="15sp"
            android:text="@string/logout"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
    </LinearLayout>
    <com.digitalminds.dmssevent.common.MovableFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        app:backgroundTint="@color/e_dark_pink"
        android:visibility="gone"
        android:src="@drawable/hand_gesture"/>

</LinearLayout>