<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="AddMorePlayerViewModel"
            type="com.digitalminds.dmssevent.viewmodel.AddMoreViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/applying_gradientcolor"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/toolbar_title_fragments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/you_can_choose_max"
                android:textColor="@color/dark_grey"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/horizontalRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/days_corner_grey"
                android:orientation="horizontal"
                android:padding="6dp">

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/depart_or_employeename" />

                <ImageView
                    android:id="@+id/searchImageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_search_black_40dp" />

            </LinearLayout>
            <ImageView
                android:id="@+id/departmentImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="2dp"
                android:src="@drawable/department"
                android:layout_gravity="center"/>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_no_resuls"
                    android:text="@string/search_employee_name"
                    android:textSize="16sp"
                    android:visibility="visible"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_alignParentTop="true"
                    android:id="@+id/selectedPlayersRecycleView"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancelBtTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ex_orange_round_corner"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/selectBtTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/green_extra_round_corners"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/select"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>
</layout>
